# scraping-case

./: .gitignore  README.md  models.py  pyproject.toml
candidate/: enricher.py  parsers.py  scraper.py
