[tool.setuptools.packages.find]
where = ["."]
include = ["candidate*", "mock_server*"]

[project]
name = "scraping-assessment"
version = "1.0.0"
description = "Technical assessment for procurement portal scraping developers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "playwright>=1.44",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["evaluation/tests"]
asyncio_mode = "auto"
